@@ -1,0 +1,20 @@
+package edu.colorado.phet.forcesandmotionbasics;
+
+/**
+ * @author Sam Reid
+ */
+public class Mode3 extends PositionMap {
+    public Mode3() {super( "Mode 3" );}
+
+    @Override public double getTilePosition( final Double x ) {
+        return 0;
+    }
+
+    @Override public double getBlockPosition( final Double x ) {
+        return 0;
+    }
+
+    @Override public double getCloudPosition( final Double x ) {
+        return 0;
+    }
+}
