@@ -1,2 +1,3 @@
+Started mode 2 motion
 # 0.00.01 (64605) Jun 4, 2012
 Added project for forces-and-motion-basics
